# gooplum-backend

./: .env.example  .gitignore  README.md  database_setup.sql  langgraph.json  pyproject.toml
resources/: discovery_prompt.md  system_prompt.md  system_prompt_new.md
resources/gumcp_docs/affinity/: _index.txt  create_field_value.txt  create_list_entry.txt  create_note.txt  create_opportunity.txt  create_organization.txt  create_person.txt  delete_field_value.txt  delete_list_entry.txt  delete_note.txt  delete_opportunity.txt  delete_organization.txt  delete_person.txt  get_field_values.txt  get_fields.txt  get_interactions.txt  get_list.txt  get_list_entries.txt  get_list_entry.txt  get_note.txt  get_notes.txt  get_opportunity.txt  get_organization.txt  get_person.txt  search_opportunities.txt  search_organizations.txt  search_persons.txt  update_field_value.txt  update_note.txt  update_opportunity.txt  update_organization.txt  update_person.txt
resources/gumcp_docs/airtable/: _index.txt  base_schema.txt  get_record.txt  (+9 more)
scripts/: generate_gumcp_docs.py  gumcp_integrations.txt
src/: agent.py  main.py
src/agents/: __init__.py  routes.py
src/api/: __init__.py  flows.py
src/config/: settings.py
src/core/: db_flow_executor.py  document_loader.py  flow_discovery.py  flow_executor.py  flow_explainer.py  flow_validator.py  middleware.py  model_config.py  sandbox.py  shared_flow_executor.py  subagents.py
src/db/: __init__.py  client.py  supabase_client.py
src/flows/: __init__.py  routes.py
src/tools/: __init__.py  ask_user.py  code_executor.py  flow_compiler.py
(+1042 files in other folders)
